[tool.poetry]
name = "pinestreetlocal"
version = "7"
description = "Free and open-source stock tracking website for America's biggest money managers. Democratizing SEC filings by making them more accessible and useful."
authors = ["zipped  <100anonyo@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
anyio = "^4.3.0"
beautifulsoup4 = "^4.12.3"
bs4 = "^0.0.2"
certifi = "^2024.2.2"
charset-normalizer = "^3.3.2"
click = "^8.1.7"
colorama = "^0.4.6"
cython = "^3.0.9"
dnspython = "^2.6.1"
fastapi = "^0.110.0"
faust-cchardet = "^2.1.19"
gunicorn = "^21.2.0"
h11 = "^0.14.0"
idna = "^3.6"
lxml = "^5.1.0"
meilisearch-python-sdk = "^2.9.0"
pydantic = "^2.6.4"
pymongo = "^4.6.2"
python-dotenv = "^1.0.1"
redis = "^5.0.3"
requests = "^2.31.0"
sniffio = "^1.3.1"
soupsieve = "^2.5"
tqdm = "^4.66.2"
typing-extensions = "^4.10.0"
urllib3 = "^2.2.1"
uvicorn = "^0.28.0"
celery = { extras = ["redis"], version = "^5.4.0" }
sentry-sdk = { extras = ["celery"], version = "^2.0.1" }
meilisearch = "^0.31.4"

[tool.poetry.scripts]
dev = "main"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.1"

[build-system]
requires = ["poetry-core>=1.9"]
build-backend = "poetry.core.masonry.api"
